# RotatingartLauncher

./: .gitattributes  .gitignore  .gitmodules  COMMIT_MESSAGE.md  CONTROLS_GUIDE.md  DRAWABLE_GUIDE.md  README.md  README.zh.md  README_EN.md  README_ZH.md  RUNTIME_SELECTOR_GUIDE.md  apply_sdl_renderer_patch.sh  build.gradle  build.gradle.kts  check-game-log.ps1  codemagic.yaml  gradle.properties  logcat.txt  settings.gradle  settings.gradle.kts  spoofs.txt
.claude/: settings.local.json
app/src/main/cpp/: And64InlineHook.cpp  And64InlineHook.h  CMakeLists.txt  NETCORE_MANAGER_USAGE.md  SDL_android_main.c  box64_launcher.cpp  box64_launcher.h  custom_egl.c  dotnet_framework.c  dotnet_framework.h  dotnet_host.c  dotnet_host.h  dotnet_params.c  dotnet_params.h  dotnet_paths.c  dotnet_paths.h  dotnet_trust.c  dotnet_trust.h  dxvk_loader.c  dxvk_loader.h  error_handler.c  error_handler.h  framework_utils.cpp  framework_utils.h  jni_bridge.c  jni_bridge.h  netcorehost_launcher.cpp  netcorehost_launcher.h  netcorehost_manager.cpp  netcorehost_manager.h  netcorehost_manager_jni.cpp  ral_injector.cpp  renderer_loader.c  sdl_entry.c  thread_affinity_manager.cpp  thread_affinity_manager.h  touch_bridge.c  turnip_loader_nsbypass.cpp  virtual_mouse_sdl.c  vulkan_turnip_loader.c  (+1 more)
app/src/main/cpp/FMOD_SDL_BUILD_DEPS/: CMakeLists.txt
app/src/main/cpp/GL/: osmesa.h
app/src/main/cpp/SDL/: Android.mk
app/src/main/cpp/SDL/.github/workflows/: android.yml  ios.yml  main.yml  msvc.yml
app/src/main/cpp/SDL/android-project/: build.gradle
app/src/main/cpp/SDL/src/: SDL.c  SDL_assert.c
app/src/main/cpp/SDL/src/audio/aaudio/: SDL_aaudio.c
app/src/main/cpp/SDL/src/core/android/: SDL_android.c  SDL_android.h
app/src/main/cpp/SDL/src/joystick/android/: SDL_sysjoystick.c  SDL_sysjoystick_c.h
app/src/main/cpp/SDL/src/main/android/: SDL_android_main.c
app/src/main/cpp/SDL/src/video/: SDL_egl.c
app/src/main/cpp/SDL_patches/: CHANGES_SUMMARY.md  CMakeLists.txt  README.md  ral_sdl_config.h  sdl_full_diff.patch
app/src/main/cpp/SDL_patches/android/: ral_android_jni.h  ral_android_renderer.h
app/src/main/cpp/SDL_patches/input/: ral_mouse_range.h  ral_touch_multitouch.h
app/src/main/cpp/clrjit/: CMakeLists.txt
app/src/main/cpp/common/: netcorehost_common.cpp
app/src/main/cpp/driver_helper/: nsbypass.c  nsbypass.h
app/src/main/cpp/glibc_bridge/: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README_CN.md  rename_to_glibc_bridge.py
app/src/main/cpp/glibc_bridge/docs/: FEX_CRANELIFT_ARCHITECTURE.md  INCREMENTAL_OPTIMIZATION_PLAN.md  OPTIMIZATION_ROADMAP.md  TABLE_DRIVEN_TRANSLATION.md  ULTIMATE_PERFORMANCE_ARCHITECTURE.md
app/src/main/cpp/glibc_bridge/src/: glibc_bridge_core.c  glibc_bridge_dynlink.c  glibc_bridge_error_hook.c  glibc_bridge_error_hook.h  glibc_bridge_fake_root.c  glibc_bridge_fake_root.h  glibc_bridge_jni.c  glibc_bridge_loader.c  glibc_bridge_runner.c  glibc_bridge_sharedlib.c  glibc_bridge_stdio.c  glibc_bridge_tls.c  glibc_bridge_tls.h
app/src/main/cpp/glibc_bridge/src/core/: core.c
app/src/main/cpp/glibc_bridge/src/dynlink/: glibc_bridge_log.c  glibc_bridge_log.h  glibc_bridge_reloc.c  glibc_bridge_resolver.c  glibc_bridge_symbol_table.c
app/src/main/cpp/glibc_bridge/src/include/: api.h  glibc_bridge_api.h  glibc_bridge_private.h  glibc_bridge_wrappers.h
app/src/main/cpp/glibc_bridge/src/jni/: jni.c
app/src/main/cpp/glibc_bridge/src/wrappers/: proot_bypass.c  proot_bypass.h  wrapper_common.c  wrapper_common.h  wrapper_cxx.c  wrapper_fortify.c  wrapper_gettext.c  wrapper_libc.c  wrapper_locale.c  wrapper_math_ext.c  wrapper_misc.c  wrapper_mlock.c  wrapper_obstack.c  wrapper_proc.c  wrapper_pthread_ext.c  wrapper_stat.c  wrapper_stdio_ext.c  wrapper_sysinfo.c  wrapper_ucontext.c
app/src/main/cpp/hardware/: hwvulkan.h
app/src/main/cpp/liblinkernsbypass/: android_linker_ns.cpp
app/src/main/cpp/linkerhook/: CMakeLists.txt  linkerhook.c
app/src/main/cpp/main/: CMakeLists.txt  app_logger.c  app_logger_jni.c  box64_launcher.cpp  dxvk_loader.c  jni_bridge.c  osm_renderer.c  osm_renderer.h  sdl_entry.c  sdl_text_bridge.c  shared_envvars.cpp  shared_envvars.hpp  thread_affinity_manager.cpp  touch_bridge.c  virtual_mouse_sdl.c  vulkan_turnip_loader.c
app/src/main/cpp/main/core/: game_launcher.cpp  game_launcher.hpp
app/src/main/cpp/main/dotnet/: corehost_trace_redirect.cpp  corehost_trace_redirect.h  dotnet_launcher.cpp  dotnet_launcher.hpp  netcorehost_launcher.cpp  netcorehost_launcher.h
app/src/main/cpp/main/utils/: native_methods.cpp
app/src/main/cpp/netcorehost/: CMakeLists.txt  USAGE_EXAMPLE.md
app/src/main/cpp/netcorehost/include/netcorehost/: bindings.hpp  context.hpp  delegate_loader.hpp  error.hpp  hostfxr.hpp  nethost.hpp  pdcstring.hpp
app/src/main/cpp/netcorehost/src/: context.cpp  delegate_loader.cpp  error.cpp  hostfxr.cpp  nethost.cpp  pdcstring.cpp
app/src/main/cpp/osmesa/: osm_bridge.c  osm_bridge.h  osm_renderer.c  osm_renderer.h  osm_renderer_jni.c  osmesa_loader.c  osmesa_loader.h  vulkan_loader.c  vulkan_loader.h
app/src/main/cpp/utils/: loader_dlopen.c  loader_dlopen.h
core/: CMakeLists.txt
core/cmake/: FaudioOptions.cmake  Fna3dOptions.cmake  Gl4esOptions.cmake  SdlOptions.cmake
core/includes/: jni_entry.hpp  logger.hpp  shared_envvars.hpp  thread_affinity_manager.h
core/includes/dotnet/: corehost_hooks.h  dotnet_launcher.hpp
core/includes/hardware/: hardware.h
core/libs/dobby/: CMakeLists.txt
core/libs/dobby/builtin-plugin/SymbolResolver/: CMakeLists.txt
core/libs/dotnethost/: CMakeLists.txt
core/libs/dotnethost/include/dotnethost/: bindings.hpp  context.hpp  error.hpp  hostfxr.hpp  nethost.hpp  pdcstring.hpp
core/libs/dotnethost/src/: context.cpp  error.cpp  hostfxr.cpp  nethost.cpp  nethost_stub.cpp  pdcstring.cpp
core/src/: game_launcher.cpp  jni_entry.cpp  logger.cpp  native_stdio.cpp  osm_renderer.cpp  shared_envvars.cpp  thread_affinity_manager.cpp
core/src/dotnet/: corehost_hooks.cpp  dotnet_launcher.cpp
core/src/sdl/: sdl_entry.cpp  sdl_input_bridge_extend.cpp
(+1198 files in other folders)
